Regrouped th SVG

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         height="555"
         viewBox="0 0 1180 555"
         fill="none"
+        id="hero-img"
       >
         <path
           d="M1160.85 554.102V554.898C1160.85 554.898 1160.67 554.626 1160.32 554.102H1160.85Z"
