Added more animations

--- a/index.html
+++ b/index.html
@@ -2024,6 +2024,143 @@
               fill="#030323"
             />
           </g>
+          <g id="products">
+            <g id="product5" class="product">
+              <path
+                id="Vector_446"
+                d="M1131.05 410.332H1067.18V466.401H1131.05V410.332Z"
+                fill="#030323"
+              />
+              <path
+                id="Vector_447"
+                d="M1111.8 410.332H1047.93V466.401H1111.8V410.332Z"
+                fill="#441346"
+              />
+              <path
+                id="Vector_448"
+                d="M1066.88 455.998H1060.23V462.345H1066.88V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_449"
+                d="M1057.67 455.998H1051.03V462.345H1057.67V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_450"
+                d="M1076.15 455.998H1069.5V462.345H1076.15V455.998Z"
+                fill="#E89E8A"
+              />
+            </g>
+            <g id="product4" class="product">
+              <path
+                id="Vector_451"
+                d="M726.922 410.332H663.048V466.401H726.922V410.332Z"
+                fill="#441346"
+              />
+              <path
+                id="Vector_452"
+                d="M707.668 410.332H643.794V466.401H707.668V410.332Z"
+                fill="#030323"
+              />
+              <path
+                id="Vector_453"
+                d="M662.744 455.998H656.102V462.345H662.744V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_454"
+                d="M653.535 455.998H646.893V462.345H653.535V455.998Z"
+                fill="#E68D45"
+              />
+              <path
+                id="Vector_455"
+                d="M672.016 455.998H665.374V462.345H672.016V455.998Z"
+                fill="#E68D45"
+              />
+            </g>
+            <g id="product3" class="product">
+              <path
+                id="Vector_456"
+                d="M919.978 410.332H856.104V466.401H919.978V410.332Z"
+                fill="#030323"
+              />
+              <path
+                id="Vector_457"
+                d="M900.727 410.332H836.854V466.401H900.727V410.332Z"
+                fill="#441346"
+              />
+              <path
+                id="Vector_458"
+                d="M855.8 455.998H849.158V462.345H855.8V455.998Z"
+                fill="#E68D45"
+              />
+              <path
+                id="Vector_459"
+                d="M846.593 455.998H839.951V462.345H846.593V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_460"
+                d="M865.071 455.998H858.429V462.345H865.071V455.998Z"
+                fill="#E68D45"
+              />
+            </g>
+            <g id="product2" class="product">
+              <path
+                id="Vector_461"
+                d="M547.041 410.332H483.167V466.401H547.041V410.332Z"
+                fill="#E68D45"
+              />
+              <path
+                id="Vector_462"
+                d="M527.786 410.332H463.912V466.401H527.786V410.332Z"
+                fill="#030323"
+              />
+              <path
+                id="Vector_463"
+                d="M482.862 455.998H476.22V462.345H482.862V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_464"
+                d="M473.654 455.998H467.012V462.345H473.654V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_465"
+                d="M492.134 455.998H485.492V462.345H492.134V455.998Z"
+                fill="#E89E8A"
+              />
+            </g>
+            <g id="product1" class="product">
+              <path
+                id="Vector_466"
+                d="M196.637 410.332H132.763V466.401H196.637V410.332Z"
+                fill="#DFAFA2"
+              />
+              <path
+                id="Vector_467"
+                d="M177.383 410.332H113.509V466.401H177.383V410.332Z"
+                fill="#441346"
+              />
+              <path
+                id="Vector_468"
+                d="M132.458 455.998H125.816V462.345H132.458V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_469"
+                d="M123.248 455.998H116.606V462.345H123.248V455.998Z"
+                fill="#E89E8A"
+              />
+              <path
+                id="Vector_470"
+                d="M141.729 455.998H135.087V462.345H141.729V455.998Z"
+                fill="#E89E8A"
+              />
+            </g>
+          </g>
           <g id="robot">
             <path
               id="Vector_402"
@@ -2263,143 +2400,6 @@
                 id="Vector_445"
                 d="M358.807 437.258C355.484 432.423 350.443 429.013 345.479 426.01L347.905 426.012C352.874 429.012 357.919 432.418 361.241 437.257L358.807 437.258Z"
                 fill="#030323"
-              />
-            </g>
-          </g>
-          <g id="products">
-            <g id="product5">
-              <path
-                id="Vector_446"
-                d="M1131.05 410.332H1067.18V466.401H1131.05V410.332Z"
-                fill="#030323"
-              />
-              <path
-                id="Vector_447"
-                d="M1111.8 410.332H1047.93V466.401H1111.8V410.332Z"
-                fill="#441346"
-              />
-              <path
-                id="Vector_448"
-                d="M1066.88 455.998H1060.23V462.345H1066.88V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_449"
-                d="M1057.67 455.998H1051.03V462.345H1057.67V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_450"
-                d="M1076.15 455.998H1069.5V462.345H1076.15V455.998Z"
-                fill="#E89E8A"
-              />
-            </g>
-            <g id="product4">
-              <path
-                id="Vector_451"
-                d="M726.922 410.332H663.048V466.401H726.922V410.332Z"
-                fill="#441346"
-              />
-              <path
-                id="Vector_452"
-                d="M707.668 410.332H643.794V466.401H707.668V410.332Z"
-                fill="#030323"
-              />
-              <path
-                id="Vector_453"
-                d="M662.744 455.998H656.102V462.345H662.744V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_454"
-                d="M653.535 455.998H646.893V462.345H653.535V455.998Z"
-                fill="#E68D45"
-              />
-              <path
-                id="Vector_455"
-                d="M672.016 455.998H665.374V462.345H672.016V455.998Z"
-                fill="#E68D45"
-              />
-            </g>
-            <g id="product3">
-              <path
-                id="Vector_456"
-                d="M919.978 410.332H856.104V466.401H919.978V410.332Z"
-                fill="#030323"
-              />
-              <path
-                id="Vector_457"
-                d="M900.727 410.332H836.854V466.401H900.727V410.332Z"
-                fill="#441346"
-              />
-              <path
-                id="Vector_458"
-                d="M855.8 455.998H849.158V462.345H855.8V455.998Z"
-                fill="#E68D45"
-              />
-              <path
-                id="Vector_459"
-                d="M846.593 455.998H839.951V462.345H846.593V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_460"
-                d="M865.071 455.998H858.429V462.345H865.071V455.998Z"
-                fill="#E68D45"
-              />
-            </g>
-            <g id="product2">
-              <path
-                id="Vector_461"
-                d="M547.041 410.332H483.167V466.401H547.041V410.332Z"
-                fill="#E68D45"
-              />
-              <path
-                id="Vector_462"
-                d="M527.786 410.332H463.912V466.401H527.786V410.332Z"
-                fill="#030323"
-              />
-              <path
-                id="Vector_463"
-                d="M482.862 455.998H476.22V462.345H482.862V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_464"
-                d="M473.654 455.998H467.012V462.345H473.654V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_465"
-                d="M492.134 455.998H485.492V462.345H492.134V455.998Z"
-                fill="#E89E8A"
-              />
-            </g>
-            <g id="product1">
-              <path
-                id="Vector_466"
-                d="M196.637 410.332H132.763V466.401H196.637V410.332Z"
-                fill="#DFAFA2"
-              />
-              <path
-                id="Vector_467"
-                d="M177.383 410.332H113.509V466.401H177.383V410.332Z"
-                fill="#441346"
-              />
-              <path
-                id="Vector_468"
-                d="M132.458 455.998H125.816V462.345H132.458V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_469"
-                d="M123.248 455.998H116.606V462.345H123.248V455.998Z"
-                fill="#E89E8A"
-              />
-              <path
-                id="Vector_470"
-                d="M141.729 455.998H135.087V462.345H141.729V455.998Z"
-                fill="#E89E8A"
               />
             </g>
           </g>
